# tapioca

./: .gitignore  .gitmodules  CMakeLists.txt  Hardware Components List  README.md  Tapioca2DisplaySettings.txt  clock.sh  demo.sh  resetmatrix.py  tapioca.bdf
boot/: config.txt  ssh  wpa_supplicant.conf
hw/: bom.txt
scripts/: clock.sh  demo.sh
src/: display.h  rgbdisplay.cc  rgbdisplay.h  tapioca.cc  tapioca.h  termdisplay.cc  termdisplay.h
submodules/: CMakeLists.txt
