cmake_minimum_required(VERSION 3.13.4)
project(tapioca VERSION 0.1 LANGUAGES CXX)

find_package (Threads)

if(NOT ${CMAKE_VERSION} LESS 3.2)
    set(CMAKE_CXX_STANDARD 14)
    set(CMAKE_CXX_STANDARD_REQUIRED ON)
else()
    message(STATUS "Checking compiler flags for C++14 support.")
    # Set C++14 support flags for various compilers
    include(CheckCXXCompilerFlag)
    check_cxx_compiler_flag("-std=c++14" COMPILER_SUPPORTS_CXX14)
    check_cxx_compiler_flag("-std=c++0x" COMPILER_SUPPORTS_CXX0X)
    if(COMPILER_SUPPORTS_CXX14)
        message(STATUS "C++14 is supported.")
        if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
            set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -stdlib=libc++")
        else()
            set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
        endif()
    elseif(COMPILER_SUPPORTS_CXX0X)
        message(STATUS "C++0x is supported.")
        if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
            set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x -stdlib=libc++")
        else()
            set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
        endif()
    else()
        message(STATUS "The compiler ${CMAKE_CXX_COMPILER} has no C++14 support. Please use a different C++ compiler.")
    endif()
endif()

include(${CMAKE_ROOT}/Modules/ExternalProject.cmake)
include(${CMAKE_ROOT}/Modules/ProcessorCount.cmake)

set (PROJECT_SOURCE_DIR ${CMAKE_SOURCE_DIR}/src)
set (GLOBAL_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/bin)
file(GLOB TAPIOCA_SOURCES ${PROJECT_SOURCE_DIR}/*.cc)

add_subdirectory(submodules)
include_directories(${CPR_INCLUDE_DIRS})
include_directories(${RGB_INCLUDE_DIRS})
include_directories(${TOML_INCLUDE_DIRS})

add_executable (tapioca ${TAPIOCA_SOURCES})

target_link_libraries(tapioca PRIVATE ${CPR_LIBRARIES})
target_link_libraries(tapioca PRIVATE nlohmann_json::nlohmann_json)
target_link_libraries(tapioca PRIVATE ${GLOBAL_OUTPUT_PATH}/librgbmatrix.a)
target_link_libraries(tapioca PRIVATE ${CMAKE_THREAD_LIBS_INIT})

add_dependencies(tapioca rgbmatrix_build)
